<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDECED"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/view2"
        app:layout_constraintHeight_percent=".3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tv_add_new_device"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="@dimen/padding_10"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/add_device"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        app:layout_constraintEnd_toStartOf="@id/tv_add_new_employee"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toTopOf="@+id/view1"
        app:layout_constraintWidth_percent=".4" />

    <TextView
        android:id="@+id/tv_add_new_employee"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="@dimen/padding_10"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/add_employee"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_add_new_device"
        app:layout_constraintTop_toTopOf="@+id/view1"
        app:layout_constraintWidth_percent=".4" />


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/view3"
        app:layout_constraintHeight_percent=".33"
        app:layout_constraintTop_toBottomOf="@id/view1"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tv_assign_device"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="@dimen/padding_10"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/assign_device"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        app:layout_constraintEnd_toStartOf="@id/tv_issue_device"
        app:layout_constraintStart_toStartOf="@id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintWidth_percent=".4" />

    <TextView
        android:id="@+id/tv_issue_device"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="@dimen/padding_10"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/issued_devices"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_assign_device"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintWidth_percent=".4" />


    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".33"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:layout_constraintVertical_chainStyle="spread" />


    <TextView
        android:id="@+id/tv_all_devices"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="@dimen/padding_10"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/all_devices"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view3"
        app:layout_constraintEnd_toStartOf="@+id/tv_employee_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintWidth_percent=".4" />

    <TextView
        android:id="@+id/tv_employee_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="@dimen/padding_10"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/all_employees"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_all_devices"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintWidth_percent=".4" />


</androidx.constraintlayout.widget.ConstraintLayout>